    usr/share/petname/complex/names.txt, usr/share/petname/names.txt:
    - LP: #1583402
    - drastically simplify petnames by culling complex names, adjectives,
      and adverbs
    - we do this by adding a couple of requirements on our words, which
      should now be:
      + 8 characters or less
      + 3 syllables or less
      + words known in Ubuntu's dict(1)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 30 Oct 2015 10:15:09 -0500

petname (1.9-0ubuntu1) xenial; urgency=medium

  * usr/bin/petname:
    - add support for --adverb|--adjective|--noun, to give
      only a random word of this type
  * usr/bin/petname:
    - define error() function
  * debian/blacklist.txt, debian/rules,
    usr/share/petname/adjectives.txt, usr/share/petname/adverbs.txt,
    usr/share/petname/names.txt:
    - add a blacklist, adapted from
      https://github.com/shutterstock/List-of-Dirty-Naughty-Obscene-and-Otherwise-Bad-Words/blob/master/en
    - check our wordlists against that blacklist during the build
    - update our wordlists removing any blacklisted words or derivatives
      + note that this conservatively prunes a few perfectly acceptable words
  * debian/blacklist.txt:
    - add our religious figures to our blacklist

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 30 Oct 2015 10:15:06 -0500

petname (1.8-0ubuntu1) vivid; urgency=medium

  * usr/bin/petname:
    - add a -h|--help option that drops you in the manpage
  * usr/bin/petname, usr/share/man/man1/petname.1,
    usr/share/petname/petname.sh:
    - support directories with customized adjectives, adverbs, and names
  * usr/bin/petname, usr/share/petname/petname.sh:
    - move into a Generate() function
  * usr/share/petname/names.txt:
    - drastically increase list of first names, using US Census data:
      http://deron.meranda.us/data/census-derived-all-first.txt
  * README.md, usr/share/petname/adjectives.txt,
    usr/share/petname/adverbs.txt: