@@ -284,7 +284,6 @@ shrimping
 skeet
 slanteye
 slut
-s&m
 smut
 snatch
 snowballing
